# Low-Latency-Limit-Order-Book-Matching-Engine

./: .gitignore  BUG_CONDITION_TEST_RESULTS.md  CMakeLists.txt  PRD_OrderMatchingEngine.md  PRESERVATION_TEST_README.md  README.md  README_benchmark_template.md  README_hardware_spec_template.md  TASK_2_COMPLETION_SUMMARY.md  TASK_3.8_FIX_VERIFICATION_RESULTS.md  TASK_3_9_VERIFICATION_REPORT.md  TASK_4_FINAL_CHECKPOINT.md  benchmark_run.txt  test_fix_verification.cpp  test_msvc_bug_condition.cpp  test_preservation.cpp  test_tsc_detection.cpp
.kiro/specs/msvc-tsc-preprocessor-fix/: .config.kiro  bugfix.md  design.md  tasks.md
benchmark/: bench.cpp
docs/: architecture.md  benchmarking.md  design-decisions.md  github-optimization.md  recruiter-summary.md  windows_benchmark_instructions.ps1
include/: engine_thread.h  matching_engine.h  memory_pool.h  order.h  order_book.h  pre_trade_risk.h  spsc_queue.h  timekeeper.h  trade.h  types.h
src/: engine_thread.cpp  main.cpp  matching_engine.cpp  order_book.cpp
